crates/rs_html_parser_tokenizer/tests/snapshots/html5lib_special_tests__tests__dash_in_comment.snap
---
source: crates/rs_html_parser_tokenizer/tests/html5lib_special_tests.rs
expression: "tokenize(\"<!----->\")"
---
[
    TokenizerToken {
        start: 4,
        end: 5,
        location: Comment,
        code: 0,
        quote: NoValue,
    },
    TokenizerToken {
        start: 8,
        end: 8,
        location: End,
        code: 0,
        quote: NoValue,
    },
]
